--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (20.1.8-1-c1) unstable; urgency=medium
+
+  * Merge tag 'mesa-20.1.8-1' into ciwei100000.
+
+ -- ciwei100000 <ciwei100000@gmail.com>  Thu, 17 Sep 2020 02:49:04 -0700
+
 mesa (20.1.8-1) unstable; urgency=medium
 
   * New upstream release.
